Source/Python/Ecc/CParser.py
# $ANTLR 3.0.1 C.g 2007-12-25 19:09:35

from antlr3 import *
from antlr3.compat import set, frozenset
         
import CodeFragment
import FileProfile



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
CHARACTER_LITERAL=8
LETTER=11
Exponent=15
DECIMAL_LITERAL=7
IntegerTypeSuffix=14
UnicodeVocabulary=20
HexDigit=13
WS=19
LINE_COMMAND=23
COMMENT=21
LINE_COMMENT=22
OCTAL_LITERAL=6
HEX_LITERAL=5
FLOATING_POINT_LITERAL=10
UnicodeEscape=18
EscapeSequence=12
EOF=-1
STRING_LITERAL=9
OctalEscape=17
IDENTIFIER=4
FloatTypeSuffix=16

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "IDENTIFIER", "HEX_LITERAL", "OCTAL_LITERAL", "DECIMAL_LITERAL", "CHARACTER_LITERAL", 
    "STRING_LITERAL", "FLOATING_POINT_LITERAL", "LETTER", "EscapeSequence", 
    "HexDigit", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "OctalEscape", 
    "UnicodeEscape", "WS", "UnicodeVocabulary", "COMMENT", "LINE_COMMENT", 
    "LINE_COMMAND", "';'", "'typedef'", "','", "'='", "'extern'", "'static'", 
    "'auto'", "'register'", "'void'", "'char'", "'short'", "'int'", "'long'", 
    "'float'", "'double'", "'signed'", "'unsigned'", "'{'", "'}'", "'struct'", 
    "'union'", "':'", "'enum'", "'const'", "'volatile'", "'IN'", "'OUT'", 
    "'('", "')'", "'['", "']'", "'*'", "'...'", "'+'", "'-'", "'/'", "'%'", 
    "'++'", "'--'", "'sizeof'", "'.'", "'->'", "'&'", "'~'", "'!'", "'*='", 
    "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
    "'?'", "'||'", "'&&'", "'|'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='", 
    "'>='", "'<<'", "'>>'", "'case'", "'default'", "'if'", "'else'", "'switch'", 
    "'while'", "'do'", "'for'", "'goto'", "'continue'", "'break'", "'return'"
]


class function_definition_scope(object):
    def __init__(self):
        self.ModifierText = None
        self.DeclText = None


class CParser(Parser):
    grammarFileName = "C.g"
    tokenNames = tokenNames

    def __init__(self, input):
        Parser.__init__(self, input)
        self.ruleMemo = {}

	self.function_definition_stack = []



                


              
            
    def printTokenInfo(self, line, offset, tokenText):
    	print str(line)+ ',' + str(offset) + ':' + str(tokenText)
        
    def StorePredicateExpression(self, StartLine, StartOffset, EndLine, EndOffset, Text):
    	PredExp = CodeFragment.PredicateExpression(Text, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.PredicateExpressionList.append(PredExp)
    	
    def StoreEnumerationDefinition(self, StartLine, StartOffset, EndLine, EndOffset, Text):
    	EnumDef = CodeFragment.EnumerationDefinition(Text, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.EnumerationDefinitionList.append(EnumDef)
    	
    def StoreStructUnionDefinition(self, StartLine, StartOffset, EndLine, EndOffset, Text):
    	SUDef = CodeFragment.StructUnionDefinition(Text, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.StructUnionDefinitionList.append(SUDef)
    	
    def StoreTypedefDefinition(self, StartLine, StartOffset, EndLine, EndOffset, FromText, ToText):
    	Tdef = CodeFragment.TypedefDefinition(FromText, ToText, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.TypedefDefinitionList.append(Tdef)
    
    def StoreFunctionDefinition(self, StartLine, StartOffset, EndLine, EndOffset, ModifierText, DeclText):
    	FuncDef = CodeFragment.FunctionDefinition(ModifierText, DeclText, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.FunctionDefinitionList.append(FuncDef)
    	
    def StoreVariableDeclaration(self, StartLine, StartOffset, EndLine, EndOffset, ModifierText, DeclText):
    	VarDecl = CodeFragment.VariableDeclaration(ModifierText, DeclText, (StartLine, StartOffset), (EndLine, EndOffset))
    	FileProfile.VariableDeclarationList.append(VarDecl)
    



    # $ANTLR start translation_unit
    # C.g:46:1: translation_unit : ( external_declaration )+ ;
    def translation_unit(self, ):

        translation_unit_StartIndex = self.input.index()
        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 1):
                    return 

                # C.g:47:2: ( ( external_declaration )+ )
                # C.g:47:4: ( external_declaration )+
                # C.g:47:4: ( external_declaration )+
                cnt1 = 0
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == IDENTIFIER or LA1_0 == 25 or (28 <= LA1_0 <= 40) or (43 <= LA1_0 <= 44) or (46 <= LA1_0 <= 51) or LA1_0 == 55) :
                        alt1 = 1


                    if alt1 == 1:
                        # C.g:0:0: external_declaration
                        self.following.append(self.FOLLOW_external_declaration_in_translation_unit64)
                        self.external_declaration()
                        self.following.pop()
                        if self.failed:
                            return 


                    else:
                        if cnt1 >= 1:
                            break #loop1

                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        eee = EarlyExitException(1, self.input)
                        raise eee

                    cnt1 += 1






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:
            if self.backtracking > 0:
                self.memoize(self.input, 1, translation_unit_StartIndex)

            pass

        return 

    # $ANTLR end translation_unit


    # $ANTLR start external_declaration
    # C.g:58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );
    def external_declaration(self, ):

        external_declaration_StartIndex = self.input.index()
        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 2):
                    return 

                # C.g:63:2: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? )
                alt3 = 3
                LA3_0 = self.input.LA(1)

                if ((28 <= LA3_0 <= 31)) :
                    LA3_1 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 1, self.input)

                        raise nvae

                elif (LA3_0 == 32) :
                    LA3_2 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 2, self.input)

                        raise nvae

                elif (LA3_0 == 33) :
                    LA3_3 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 3, self.input)

                        raise nvae

                elif (LA3_0 == 34) :
                    LA3_4 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 4, self.input)

                        raise nvae

                elif (LA3_0 == 35) :
                    LA3_5 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 5, self.input)

                        raise nvae

                elif (LA3_0 == 36) :
                    LA3_6 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 6, self.input)

                        raise nvae

                elif (LA3_0 == 37) :
                    LA3_7 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 7, self.input)

                        raise nvae

                elif (LA3_0 == 38) :
                    LA3_8 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 8, self.input)

                        raise nvae

                elif (LA3_0 == 39) :
                    LA3_9 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 9, self.input)

                        raise nvae

                elif (LA3_0 == 40) :
                    LA3_10 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 10, self.input)

                        raise nvae

                elif ((43 <= LA3_0 <= 44)) :
                    LA3_11 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 11, self.input)

                        raise nvae

                elif (LA3_0 == 46) :
                    LA3_12 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 12, self.input)

                        raise nvae

                elif (LA3_0 == IDENTIFIER) :
                    LA3_13 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    elif (True) :
                        alt3 = 3
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 13, self.input)

                        raise nvae

                elif ((47 <= LA3_0 <= 50)) :
                    LA3_14 = self.input.LA(2)

                    if (self.synpred4()) :
                        alt3 = 1
                    elif (self.synpred5()) :
                        alt3 = 2
                    else:
                        if self.backtracking > 0:
                            self.failed = True
                            return 

                        nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 14, self.input)

                        raise nvae

                elif (LA3_0 == 55) and (self.synpred4()):
                    alt3 = 1
                elif (LA3_0 == 51) and (self.synpred4()):
                    alt3 = 1
                elif (LA3_0 == 25) :
                    alt3 = 2
                else:
                    if self.backtracking > 0:
                        self.failed = True
                        return 

                    nvae = NoViableAltException("58:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration | macro_statement ( ';' )? );", 3, 0, self.input)

                    raise nvae

                if alt3 == 1:
                    # C.g:63:4: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition
                    self.following.append(self.FOLLOW_function_definition_in_external_declaration103)
                    self.function_definition()
                    self.following.pop()
                    if self.failed:
                        return 


                elif alt3 == 2:
                    # C.g:64:4: declaration
                    self.following.append(self.FOLLOW_declaration_in_external_declaration108)
                    self.declaration()
                    self.following.pop()
                    if self.failed:
                        return 


                elif alt3 == 3:
                    # C.g:65:4: macro_statement ( ';' )?
                    self.following.append(self.FOLLOW_macro_statement_in_external_declaration113)
                    self.macro_statement()
                    self.following.pop()
                    if self.failed:
                        return 
                    # C.g:65:20: ( ';' )?
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == 24) :
                        alt2 = 1
                    if alt2 == 1:
                        # C.g:65:21: ';'
                        self.match(self.input, 24, self.FOLLOW_24_in_external_declaration116)
                        if self.failed:
                            return 






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:
            if self.backtracking > 0:
                self.memoize(self.input, 2, external_declaration_StartIndex)

            pass

        return 

    # $ANTLR end external_declaration

    class function_definition_return(object):
        def __init__(self):
            self.start = None
            self.stop = None



    # $ANTLR start function_definition
    # C.g:70:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) ;
    def function_definition(self, ):
        self.function_definition_stack.append(function_definition_scope())
        retval = self.function_definition_return()
        retval.start = self.input.LT(1)
        function_definition_StartIndex = self.input.index()
        declaration_specifiers1 = None

        declarator2 = None


               
        self.function_definition_stack[-1].ModifierText =  ''
        self.function_definition_stack[-1].DeclText =  ''

        try:
            try:
                if self.backtracking > 0 and self.alreadyParsedRule(self.input, 3):
                    return retval

                # C.g:82:2: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) )
                # C.g:82:4: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement )
                # C.g:82:4: ( declaration_specifiers )?
                alt4 = 2
                LA4_0 = self.input.LA(1)
